--- a/CSS/dna-coder.css
+++ b/CSS/dna-coder.css
@@ -45,18 +45,23 @@
 }
 
 .problem {
-    display: grid;
-    grid-auto-flow: row;
+    display: flex;
+    /* order: 5; */
+    flex-wrap: wrap;
     gap: 5px;
     background-color: black;
     padding: 10px;
-    grid-template-rows: 40px 40px;
     width: fit-content;
     margin: 0 auto;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    justify-content: center;
 }
 
-.container > div, .problem > div {
+.problem > div {
+    flex-grow: 1;
+}
+
+.container > div, .problem-cell {
     background-color: #202020;
     padding: 5px 0;
     font-size: 10px;
@@ -67,12 +72,24 @@
     color: white;
 }
 
-.problem > div {
+.problem > div > div {
+    min-height: 30px;
+    min-width: 100px;
+}
+
+.problem-cell {
     font-size: 30px;
 }
 
-.problem > input {
+.problem > div > div {
     text-align: center;
+}
+
+.problem-input {
+    background-color: white;
+    font-size: smaller;
+    height: 30px;
+    line-height: 30px;
 }
 
 .correct {
