--- a/CSS/dna-coder.css
+++ b/CSS/dna-coder.css
@@ -62,7 +62,7 @@
 }
 
 .container > div, .problem-cell {
-    background-color: rgb(23, 22, 22);
+    background-color: rgb(23, 22,);
     padding: 5px 0;
     font-size: 10px;
     align-items: center;
